WTPlanner/force-app/main/default/objects/Expedition_Booking__c/Expedition_Booking__c.object-meta.xml
<CustomObject>
    <label>Expedition Booking</label>
    <pluralLabel>Expedition Bookings</pluralLabel>
    <nameField>
        <label>Booking Number</label>
        <type>AutoNumber</type>
        <displayFormat>EXP-{00000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>