WTPlanner/force-app/main/default/objects/Expedition_Booking__c/fields/Expedition_Name__c.field-meta.xml
<CustomField>
    <fullName>Expedition_Name__c</fullName>
    <label>Expedition Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>