WTPlanner/force-app/main/default/objects/Expedition_Booking__c/fields/Explorer__c.field-meta.xml
<CustomField>
    <fullName>Explorer__c</fullName>
    <label>Explorer</label>
    <type>Lookup</type>
    <referenceTo>Lunar_Explorer__c</referenceTo>
    <relationshipLabel>Expedition Bookings</relationshipLabel>
    <relationshipName>Expedition_Bookings</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>